--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
 	<address>
 	  <nobr><a href="https://orgadhadas.github.io/" target="_blank">Hadas Orgad</a><sup>1</sup>,</nobr>
 	  <nobr><a href="https://tokeron.github.io/" target="_blank">Michael Toker</a><sup>1</sup>,</nobr>
-	  <nobr><a href="https://x.com/zorikgekhman" target="_blank">Zorik Gekhman</a><sup>1</sup></nobr>
-	  <nobr><a href="https://roireichart.com/" target="_blank">Roi Reichart</a><sup>1</sup></nobr>
-	  <nobr><a href="https://sites.google.com/site/idanszpektor" target="_blank">Idan Szpektor</a><sup>2</sup></nobr>
-	  <nobr><a href="https://hkotek.com/" target="_blank">Hadas Kotek</a><sup>3</sup></nobr>
+	  <nobr><a href="https://x.com/zorikgekhman" target="_blank">Zorik Gekhman</a><sup>1</sup>,</nobr>
+	  <nobr><a href="https://roireichart.com/" target="_blank">Roi Reichart</a><sup>1</sup>,</nobr>
+	  <nobr><a href="https://sites.google.com/site/idanszpektor" target="_blank">Idan Szpektor</a><sup>2</sup>,</nobr>
+	  <nobr><a href="https://hkotek.com/" target="_blank">Hadas Kotek</a><sup>3</sup>,</nobr>
 	  <nobr><a href="https://belinkov.com/" target="_blank">Yonatan Belinkov</a><sup>1</sup>,</nobr>
 	 <br>
 	  <nobr><sup>1</sup><institute>Technion - IIT</a></institute></nobr>;
