--- a/index.html
+++ b/index.html
@@ -54,13 +54,19 @@
 		  font-style: italic; /* Styling for the caption */
 		}
 
-        header h1 {
+<!--         header h1 {
 			margin: 0;
 			font-size: 60px;
 			padding-bottom: 30px;
 			padding-top: 20px;
 			padding-left: 20px;
 			padding-right: 20px;
+        } -->
+		
+		header h1 {
+            margin: 0;
+            font-size: 40px;
+            padding: 0 20px;
         }
 
         header h2 {
@@ -69,7 +75,8 @@
         }
 		
 		header address a {
-			font-size: 24px;
+			<!-- font-size: 24px; -->
+			font-size: 18px;
 		}
 		
 		header address {
@@ -86,8 +93,9 @@
 		}
 
         .container {
-            width: 60%;
-            margin: 40px auto;
+            width: 90%;
+            max-width: 1200px;
+            margin: 20px auto;
         }
 		
         section {
@@ -106,6 +114,71 @@
             line-height: 1.6;
             margin-top: 10px;
         }
+		
+		        @media (max-width: 768px) {
+            header h1 {
+                font-size: 32px;
+            }
+
+            header address a {
+                font-size: 16px;
+            }
+
+            .container {
+                width: 100%;
+                padding: 0 15px;
+            }
+
+            .figure-container figure {
+                flex: 1 1 100%;
+            }
+
+            .key-contributions, .methodology, .definitions {
+                padding: 15px;
+            }
+
+            section h2 {
+                font-size: 20px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 28px;
+            }
+
+            header address a {
+                font-size: 14px;
+            }
+
+            .key-contributions, .methodology, .definitions {
+                padding: 10px;
+            }
+
+            section p {
+                font-size: 14px;
+            }
+        }
+		
+		/* On larger screens (e.g., tablets, desktops) */
+		@media (min-width: 768px) {
+			img.float-figure {
+				float: right;
+				margin-left: 20px;
+				margin-right: 0;
+				width: 30%; /* Adjust based on your layout */
+			}
+		}
+
+		/* On smaller screens (e.g., phones), reset to inline */
+		@media (max-width: 767px) {
+			img.float-figure {
+				float: none;
+				margin-left: auto;
+				margin-right: auto;
+				width: 100%; /* Full width inline */
+			}
+		}
 		
 		.figure-container {
 		  display: grid;
@@ -248,8 +321,8 @@ Large language models (LLMs) often produce errors, including factual inaccuracie
 	<h2 class="subtitle">Methodology</h2>
     <section class="methodology">
 		<figure>
-		<img src="img/triviaqa_auc.png" class="img-inline" style="width:30%; height:auto; float:right;">
-		<figcaption style="clear: both; float:right; width:30%">Example for the input and LLM output from the TriviaQA dataset, and the names of the tokens that can be probed.</figcaption>
+		<img class="float-figure" src="img/triviaqa_auc.png" class="img-inline">
+		<figcaption class="float-figure">Example for the input and LLM output from the TriviaQA dataset, and the names of the tokens that can be probed.</figcaption>
 		</figure>
         <h3>Tools & Techniques</h3>
         <ul>
@@ -262,7 +335,7 @@ Large language models (LLMs) often produce errors, including factual inaccuracie
 	By probing the exact answer tokens within LLM outputs, we discovered stronger signals of truthfulness in the exact answer token, enabling better detection of hallucinations.	
 	</p>
 	<figure>
-	<img src="img/tokens_figure.png" class="img-inline" style="width:70%; height:auto;">
+	<img src="img/tokens_figure.png" class="img-inline" style="width:70%; min-width: 300px; height:auto;">
 	<figcaption>Example for the input and LLM output from the TriviaQA dataset, and the names of the tokens that can be probed.</figcaption>
 	</figure>
     </section>
@@ -273,7 +346,7 @@ Large language models (LLMs) often produce errors, including factual inaccuracie
 		<p>
 			Using a probing classifier trained to predict errors from the representations of the exact answer tokens significantly improves error detection. (measured metric is AUC)
 				<figure>
-				<img src="img/error_detection.png" class="img-inline" style="width:30%; height:auto; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+				<img src="img/error_detection.png" class="img-inline" style="width:50%; min-width: 300px; height:auto; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
 				<figcaption>Error detection across different datasets.</figcaption>
 				</figure>
 		</p>
@@ -288,11 +361,11 @@ Large language models (LLMs) often produce errors, including factual inaccuracie
 				<figure>
 				<div class="figure-container">
 				<figure>
-				<img src="img/generalization1.png" class="img-inline" style="width:70%; height:auto; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+				<img src="img/generalization1.png" class="img-inline" style="width:70%; min-width: 150px; height:auto; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
 				<figcaption>Raw AUC values. Values above 0.5 indicate some generalization.</figcaption>
 				</figure>
 				<figure>
-				<img src="img/generalization2.png" class="img-inline" style="width:65%; height:auto; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+				<img src="img/generalization2.png" class="img-inline" style="width:65%; min-width: 150px; height:auto; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
 				<figcaption>Performance (AUC) difference of the probe and the logit-based method. Values above 0 indicate generalization beyond the logit-based method.</figcaption>
 				</figure>
 				</div>
@@ -311,7 +384,7 @@ Large language models (LLMs) often produce errors, including factual inaccuracie
 		<p>
 			Intuitively, not all error are the same, here are some examples for different types of errors: <figure>
 			
-			<img src="img/error_types.png" class="img-inline" style="width:60%; height:auto; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+			<img src="img/error_types.png" class="img-inline" style="    width: 90%; min-width: 300px; height:auto; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
 			<figcaption>Different error types in free-form generation, exposed when resampled many times.</figcaption>
 			</figure>
 		</p>
@@ -385,6 +458,7 @@ Large language models (LLMs) often produce errors, including factual inaccuracie
 	</div>
 	</div>
 	<p></p>
+</div>
 
 
 <footer>
